# rag-demo

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/rag_demo/: __init__.py  main.py
src/rag_demo/api/: __init__.py  routes.py
src/rag_demo/core/: __init__.py  config.py  exceptions.py
src/rag_demo/schemas/: rag.py
src/rag_demo/services/: __init__.py  faiss_store.py  rag_service.py
tests/: __init__.py  conftest.py  test_api.py  test_faiss_store.py  test_rag_service.py
