[project]
name = "rag-demo"
version = "0.1.0"
description = "A basic LangChain 1.x RAG API powered by FastAPI and FAISS."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "faiss-cpu>=1.9,<2.0",
    "fastapi>=0.115,<1.0",
    "langchain>=1.0,<2.0",
    "langchain-community>=0.3,<1.0",
    "langchain-openai>=1.0,<2.0",
    "langchain-text-splitters>=1.0,<2.0",
    "pydantic-settings>=2.6,<3.0",
    "python-multipart>=0.0.18,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.8,<1.0",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_demo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
